initialize cv markdown using R

--- a/_navbar.html
+++ b/_navbar.html
@@ -1,12 +1,7 @@
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="https://ulriklyngs.com">Ulrik Lyngs</a>
+      <a class="navbar-brand" href="https://salma71.github.io">Salma Elshahawy</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -14,19 +9,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://ulriklyngs.com">Home</a>
+  <a href="https://salma71.github.io">Home</a>
 </li>
 <li>
-  <a href="https://ulriklyngs.com/projects">Projects</a>
-</li>
-<li>
-  <a href="https://ulriklyngs.com/publications">Publications</a>
+  <a href="https://salma71.github.io/projects">Projects</a>
 </li>
 <li>
   <a href="cv.html">CV</a>
 </li>
 <li>
-  <a href="https://ulyngs.github.io/blog/">Blog</a>
+  <a href="https://salma71.github.io/blog/">Blog</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
