--- a/_navbar.html
+++ b/_navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default  navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://salma71.github.io">Salma Elshahawy</a>
+      <a class="navbar-brand" href="https://www.github.com/salma71">Salma Elshahawy</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -9,16 +9,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://salma71.github.io">Home</a>
+  <a href="https://www.github.com/salma71">Home</a>
 </li>
 <li>
-  <a href="https://salma71.github.io/projects">Projects</a>
+  <a href="https://www.github.com/salma71">Projects</a>
 </li>
 <li>
   <a href="cv.html">CV</a>
 </li>
 <li>
-  <a href="https://salma71.github.io/blog/">Blog</a>
+  <a href="https://www.medium.com/@salmaeng71">Blog</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
