--- a/_navbar.html
+++ b/_navbar.html
@@ -15,7 +15,7 @@
   <a href="https://www.github.com/salma71">Projects</a>
 </li>
 <li>
-  <a href="cv.html">CV</a>
+  <a href="https://github.com/salma71/resume_website/blob/master/Salma-Resume_Nov.11.pdf">CV-pdf</a>
 </li>
 <li>
   <a href="https://www.medium.com/@salmaeng71">Blog</a>
